--- a/src/main/java/zTesting/demo.html
+++ b/src/main/java/zTesting/demo.html
@@ -6,11 +6,11 @@
         body { height: 100%; margin: 0px; padding: 0px }
         #map_canvas { height: 100%; background-color: #666970; }
     </style>
-    <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false">
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyA0mSBF-rkv4m8Aw6kR6U0Pv9ln_nX_d5Y&sensor=false"></script>
     </script>
     <script type="text/javascript">
         function initialize() {
-            var latlng = new google.maps.LatLng(37.39822, -121.9643936);
+            var latlng = new google.maps.LatLng(42.119212, -79.982995);
             var myOptions = {
                 zoom: 14,
                 center: latlng,
