--- a/src/main/java/zTesting/demo.html
+++ b/src/main/java/zTesting/demo.html
@@ -2,12 +2,10 @@
 <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <style type="text/css">
-        html { height: 100% }
-        body { height: 100%; margin: 0px; padding: 0px }
-        #map_canvas { height: 100%; background-color: #666970; }
+
     </style>
     <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyA0mSBF-rkv4m8Aw6kR6U0Pv9ln_nX_d5Y&sensor=false"></script>
-    </script>
+
     <script type="text/javascript">
         function initialize() {
             var latlng = new google.maps.LatLng(42.119212, -79.982995);
@@ -49,7 +47,7 @@
 
             document.goToLocation = function goToLocation(searchString) {
                 document.geocoder.geocode( {'address': searchString}, function(results, status) {
-                    if (status == google.maps.GeocoderStatus.OK) {
+                    if (status === google.maps.GeocoderStatus.OK) {
                         document.map.setCenter(results[0].geometry.location);
                     } else {
                         alert("Geocode was not successful for the following reason: " + status);
@@ -60,6 +58,6 @@
     </script>
 </head>
 <body onload="initialize()">
-<div id="map_canvas" style="width:100%; height:100%"></div>
+<div id="map_canvas" style="width:60%; height:60%"></div>
 </body>
 </html>
