--- a/src/main/java/GoogleMap.html
+++ b/src/main/java/GoogleMap.html
@@ -85,6 +85,20 @@
         document.map.setcenter = latlng;
       }
 
+      // Zooms the map in on a spot
+      document.setLatLng = function setLatLng( lat, lng ){
+        var latLng = new google.maps.LatLng(lat, lng);
+        document.map.setZoom(18);
+        document.map.setCenter(latLng);
+
+
+        var marker = new google.maps.Marker({
+          position: latLng,
+          map: document.map,  // Attach the marker to the map
+          title: 'Your Marker Title'  // Optional: Add a title to the marker
+        });
+      }
+
 
       document.clickLatLong = function clickLatLong() {
         google.maps.event.addListener(document.map, 'click', function(event) {
